<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.zenwave360.sdk</groupId>
    <artifactId>zenwave-sdk</artifactId>
    <version>2.4.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>Extensible code generation framework for JSON/YAML models and specifications.</description>
    <url>https://github.com/ZenWave360/zenwave-sdk</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Ivan Garcia Sainz-Aja</name>
            <email>ivangsa@gmail.com</email>
            <organization>ZenWave360</organization>
            <organizationUrl>https://github.com/ZenWave360</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/ZenWave360/zenwave-sdk.git</connection>
        <developerConnection>scm:git:git@github.com:ZenWave360/zenwave-sdk.git</developerConnection>
        <url>https://github.com/ZenWave360/zenwave-sdk</url>
        <tag>HEAD</tag>
    </scm>

    <repositories>
        <repository>
            <id>maven-snapshots</id>
            <snapshots><enabled>true</enabled></snapshots>
            <url>https://central.sonatype.com/repository/maven-snapshots</url>
        </repository>
    </repositories>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
        <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
        <maven-project-info-reports-plugin.version>3.0.0</maven-project-info-reports-plugin.version>
        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>

        <slf4j-api.version>1.7.36</slf4j-api.version>
        <picocli.version>4.6.3</picocli.version>
        <jbang-core.version>RELEASE</jbang-core.version>
        <reflections.version>0.10.2</reflections.version>
        <handlebars-java.version>4.3.1</handlebars-java.version>
        <json-path.version>2.9.0</json-path.version>
        <json-schema-ref-parser-jvm.version>0.9.5</json-schema-ref-parser-jvm.version>
        <dsl-jvm.version>1.5.0</dsl-jvm.version>
        <graphql-java.version>19.2</graphql-java.version>
        <google-java-format.version>1.33.0</google-java-format.version>
        <palantir-java-format.version>2.83.0</palantir-java-format.version>
        <spring-javaformat.version>0.0.47</spring-javaformat.version>
        <ktfmt.version>0.59</ktfmt.version>
        <junit.version>5.10.1</junit.version>
        <spring-boot-dependencies.version>3.4.3</spring-boot-dependencies.version>
        <reflections.version>0.10.2</reflections.version>
        <junit.version>5.8.2</junit.version>
        <logcaptor.version>2.7.10</logcaptor.version>
        <central-publishing-maven-plugin.version>0.7.0</central-publishing-maven-plugin.version>
        <mockito.version>5.8.0</mockito.version>
        <jacoco.version>0.8.14</jacoco.version>

        <surefire.argLine>
            --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
            --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
            --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
            --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
            --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
        </surefire.argLine>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.github.hakky54</groupId>
            <artifactId>logcaptor</artifactId>
            <version>${logcaptor.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <modules>
        <module>zenwave-sdk-test-resources</module>
        <module>zenwave-sdk-cli</module>
        <module>plugins</module>
        <module>zenwave-sdk-maven-plugin</module>
        <module>e2e</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <localCheckout>true</localCheckout>
                    <pushChanges>false</pushChanges>
                    <mavenExecutorId>forked-path</mavenExecutorId>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
<!--                    <arguments>-DskipTests</arguments>-->
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.scm</groupId>
                        <artifactId>maven-scm-provider-gitexe</artifactId>
                        <version>1.9.5</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>${central-publishing-maven-plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>false</autoPublish>
                    <!--                    <tokenAuth>true</tokenAuth>-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <tags>
                        <tag>
                            <name>goal</name>
                            <placement>a</placement>
                            <head>Goal:</head>
                        </tag>
                        <tag>
                            <name>phase</name>
                            <placement>a</placement>
                            <head>Phase:</head>
                        </tag>
                        <tag>
                            <name>threadSafe</name>
                            <placement>a</placement>
                            <head>Thread Safe:</head>
                        </tag>
                        <tag>
                            <name>requiresDependencyResolution</name>
                            <placement>a</placement>
                            <head>Requires Dependency Resolution:</head>
                        </tag>
                        <tag>
                            <name>requiresProject</name>
                            <placement>a</placement>
                            <head>Requires Project:</head>
                        </tag>
                    </tags>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <configuration>
                    <excludes>
                        <exclude>com/intuit/karate/core/**</exclude>
                    </excludes>
                    <propertyName>jacoco.argLine</propertyName>
                </configuration>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <!-- attached to Maven test phase -->
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.simplify4u.plugins</groupId>
                <artifactId>sign-maven-plugin</artifactId>
                <version>1.0.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>enforce-release-version</id>
                        <configuration>
                            <rules>
                                <requireReleaseVersion />
                            </rules>
                        </configuration>
                    </execution>
                    <execution>
                        <id>enforce-snapshot-version</id>
                        <configuration>
                            <rules>
                                <requireSnapshotVersion>
                                    <failWhenParentIsRelease>false</failWhenParentIsRelease>
                                </requireSnapshotVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
            <plugins>
                <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                    <configuration>
                        <systemPropertyVariables>
                            <maven.home>${maven.home}</maven.home>
                        </systemPropertyVariables>
                        <argLine>${jacoco.argLine} ${surefire.argLine}</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
